Fixed Alignment of Logo

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
     background-color: #f4f4f4;
     align-items: center;
     justify-content: center;
-    padding: 10px 13px;
+    padding: 10px 20px;
     gap: 10px;
 }
 
